--- a/package.json
+++ b/package.json
@@ -56,16 +56,28 @@
     "check": "bun -v"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^2.2.10",
     "@ai-sdk/anthropic": "^1.0.5",
+    "@ai-sdk/azure": "^1.3.23",
+    "@ai-sdk/cerebras": "^0.2.14",
     "@ai-sdk/cohere": "^1.0.4",
+    "@ai-sdk/deepinfra": "^0.2.15",
+    "@ai-sdk/deepseek": "^0.2.14",
+    "@ai-sdk/fireworks": "^0.2.14",
     "@ai-sdk/google": "^1.0.10",
+    "@ai-sdk/google-vertex": "^2.2.24",
+    "@ai-sdk/groq": "^1.2.9",
     "@ai-sdk/mistral": "^1.0.4",
     "@ai-sdk/openai": "^1.0.6",
+    "@ai-sdk/perplexity": "^1.1.9",
+    "@ai-sdk/togetherai": "^0.2.14",
+    "@ai-sdk/xai": "^1.2.16",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.5",
     "ai": "^4.0.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
