--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@ai-sdk/google-vertex": "^2.2.24",
     "@ai-sdk/groq": "^1.2.9",
     "@ai-sdk/mistral": "^1.0.4",
-    "@ai-sdk/openai": "^1.0.6",
+    "@ai-sdk/openai": "^1.3.22",
     "@ai-sdk/perplexity": "^1.1.9",
     "@ai-sdk/togetherai": "^0.2.14",
     "@ai-sdk/xai": "^1.2.16",
@@ -78,7 +78,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.2.5",
-    "ai": "^4.0.18",
+    "@simonorzel26/ai-models": "^1.1.0",
+    "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
