--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "start": "next start",
     "lint": "eslint . --fix",
     "build:lib": "tsc --build --verbose",
-    "check": "bun -v"
+    "check": "bun -v",
+    "generate:registry": "bun scripts/generate-registry.mjs"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^2.2.10",
